syntax = "proto3";

option csharp_namespace = "GrpcApplicant";


service ApplicantGrpc{

	rpc RemoveExamFromApplicantData(RemoveExamRequest) returns (RemoveExamResponce);
}

message RemoveExamRequest{
	string userId = 1;
	int32 examId = 2;
}

message RemoveExamResponce{
	bool success = 1;
	string error = 2;
}
